✨ Fix footer issue

--- a/index.html
+++ b/index.html
@@ -520,8 +520,8 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="footer-brand">
-                        <img src="images/logo.png" alt="Digital Marketing Agency Madurai - AdtoLeadz Logo" height="40" class="mb-3">
-                        <p>Transforming businesses through innovative web marketing solutions. We help you grow, engage, and convert your audience into loyal customers.</p>
+                        <img src="images/logo.png" alt="AdtoLeadz Digital Marketing Agency Madurai Logo" height="40" class="mb-3">
+                        <p>Transforming businesses through innovative digital marketing solutions. We help you grow, engage, and convert your audience into loyal customers.</p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
@@ -539,35 +539,11 @@
                     <ul class="list-unstyled">
                         <li><a href="web-design.html">Web Design</a></li>
                         <li><a href="social-media-marketing.html">Social Media Marketing</a></li>
-                        <li><a href="seo.html">SEO Services</a></li>
-                        <li><a href="smo.html">SMO Services</a></li>
-                        <li><a href="seo.html#ppc">PPC Management</a></li>
-                        <li><a href="web-design.html#ecommerce">E-commerce Solutions</a></li>
+                        <li><a href="seo.html">SEO</a></li>
+                        <li><a href="smo.html">SMO</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-md-6 mb-4">
-                    <h5>Company</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="testimonials.html">Testimonials</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="about.html#team">Our Team</a></li>
-                        <li><a href="about.html#journey">Our Journey</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 mb-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="index.html#about">About Us</a></li>
-                        <li><a href="index.html#services">Our Services</a></li>
-                        <li><a href="index.html#process">Our Process</a></li>
-                        <li><a href="index.html#testimonials">Testimonials</a></li>
-                        <li><a href="index.html#blog">Latest Blog</a></li>
-                        <li><a href="index.html#resources">Resources</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 mb-4">
+                <div class="col-lg-4 mb-4">
                     <h5>Contact Info</h5>
                     <div class="contact-info">
                         <p><i class="fas fa-map-marker-alt me-2"></i>Madurai, Tamil Nadu, India</p>
@@ -575,10 +551,10 @@
                         <p><i class="fas fa-envelope me-2"></i>info@adtoleadz.com</p>
                     </div>
                     <div class="social-links mt-3">
-                        <a href="https://facebook.com/adtoleadz" target="_blank" rel="noopener noreferrer" class="me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://instagram.com/adtoleadz" target="_blank" rel="noopener noreferrer" class="me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="https://linkedin.com/company/adtoleadz" target="_blank" rel="noopener noreferrer" class="me-3"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://twitter.com/adtoleadz" target="_blank" rel="noopener noreferrer" class="me-3"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="me-3"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="me-3"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="me-3"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
